parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LEFT_SQB
    ML_COMMENT
    RIGHT_SQB
    SL_COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl_list
Rule 2     class_decl_list -> class_decl class_decl_list
Rule 3     class_decl_list -> empty
Rule 4     class_decl -> CLASS ID LEFT_CB class_body_decl_list RIGHT_CB
Rule 5     class_decl -> CLASS ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB
Rule 6     class_body_decl_list -> class_body_decl_list class_body_decl
Rule 7     class_body_decl_list -> class_body_decl
Rule 8     class_body_decl -> field_decl
Rule 9     class_body_decl -> method_decl
Rule 10    class_body_decl -> constructor_decl
Rule 11    field_decl -> modifier var_decl
Rule 12    modifier -> PUBLIC STATIC
Rule 13    modifier -> PRIVATE STATIC
Rule 14    modifier -> PUBLIC
Rule 15    modifier -> PRIVATE
Rule 16    modifier -> STATIC
Rule 17    modifier -> empty
Rule 18    var_decl -> type variables SEMI_COLON
Rule 19    type -> TYPE_INT
Rule 20    type -> TYPE_FLOAT
Rule 21    type -> TYPE_BOOLEAN
Rule 22    type -> ID
Rule 23    variables -> variables COMMA variable
Rule 24    variables -> variable
Rule 25    variable -> ID
Rule 26    method_decl -> modifier type ID LEFT_PN formals RIGHT_PN block
Rule 27    method_decl -> modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN block
Rule 28    constructor_decl -> modifier ID LEFT_PN formals RIGHT_PN block
Rule 29    formals -> empty
Rule 30    formals -> formals COMMA formal_param
Rule 31    formals -> formal_param
Rule 32    formal_param -> type variable
Rule 33    block -> LEFT_CB stmt_list RIGHT_CB
Rule 34    stmt_list -> empty
Rule 35    stmt_list -> stmt_list stmt
Rule 36    stmt -> IF LEFT_PN expr RIGHT_PN stmt
Rule 37    stmt -> IF LEFT_PN expr RIGHT_PN stmt ELSE stmt
Rule 38    stmt -> WHILE LEFT_PN expr RIGHT_PN stmt
Rule 39    stmt -> FOR LEFT_PN for_cond1 SEMI_COLON for_cond2 SEMI_COLON for_cond3 RIGHT_PN stmt
Rule 40    stmt -> RETURN return_val SEMI_COLON
Rule 41    stmt -> stmt_expr SEMI_COLON
Rule 42    stmt -> BREAK SEMI_COLON
Rule 43    stmt -> CONTINUE SEMI_COLON
Rule 44    stmt -> block
Rule 45    stmt -> var_decl
Rule 46    for_cond1 -> stmt_expr
Rule 47    for_cond1 -> empty
Rule 48    for_cond2 -> expr
Rule 49    for_cond2 -> empty
Rule 50    for_cond3 -> stmt_expr
Rule 51    for_cond3 -> empty
Rule 52    return_val -> expr
Rule 53    return_val -> empty
Rule 54    literal -> INT_CONST
Rule 55    literal -> FLOAT_CONST
Rule 56    literal -> STRING_CONST
Rule 57    literal -> NULL
Rule 58    literal -> TRUE
Rule 59    literal -> FALSE
Rule 60    primary -> literal
Rule 61    primary -> THIS
Rule 62    primary -> SUPER
Rule 63    primary -> LEFT_PN expr RIGHT_PN
Rule 64    primary -> NEW ID LEFT_PN arguments RIGHT_PN
Rule 65    primary -> lhs
Rule 66    primary -> method_invocation
Rule 67    arguments -> empty
Rule 68    arguments -> arguments COMMA expr
Rule 69    arguments -> expr
Rule 70    lhs -> field_access
Rule 71    field_access -> ID
Rule 72    field_access -> primary DOT ID
Rule 73    method_invocation -> field_access LEFT_PN arguments RIGHT_PN
Rule 74    expr -> primary
Rule 75    expr -> assign
Rule 76    assign -> lhs ASSIGN expr
Rule 77    assign -> lhs INCREMENT
Rule 78    assign -> lhs DECREMENT
Rule 79    assign -> INCREMENT lhs
Rule 80    assign -> DECREMENT lhs
Rule 81    expr -> expr PLUS expr
Rule 82    expr -> expr MINUS expr
Rule 83    expr -> expr STAR expr
Rule 84    expr -> expr F_SLASH expr
Rule 85    expr -> expr AND expr
Rule 86    expr -> expr OR expr
Rule 87    expr -> expr EQ expr
Rule 88    expr -> expr NOT_EQ expr
Rule 89    expr -> expr LT expr
Rule 90    expr -> expr LTE expr
Rule 91    expr -> expr GT expr
Rule 92    expr -> expr GTE expr
Rule 93    expr -> PLUS expr
Rule 94    expr -> MINUS expr
Rule 95    expr -> NOT expr
Rule 96    stmt_expr -> assign
Rule 97    stmt_expr -> method_invocation
Rule 98    empty -> <empty>

Terminals, with rules where they appear

AND                  : 85
ASSIGN               : 76
BREAK                : 42
CLASS                : 4 5
COMMA                : 23 30 68
CONTINUE             : 43
DECREMENT            : 78 80
DOT                  : 72
ELSE                 : 37
EQ                   : 87
EXTENDS              : 5
FALSE                : 59
FLOAT_CONST          : 55
FOR                  : 39
F_SLASH              : 84
GT                   : 91
GTE                  : 92
ID                   : 4 5 5 22 25 26 27 28 64 71 72
IF                   : 36 37
INCREMENT            : 77 79
INT_CONST            : 54
LEFT_CB              : 4 5 33
LEFT_PN              : 26 27 28 36 37 38 39 63 64 73
LEFT_SQB             : 
LT                   : 89
LTE                  : 90
MINUS                : 82 94
ML_COMMENT           : 
NEW                  : 64
NOT                  : 95
NOT_EQ               : 88
NULL                 : 57
OR                   : 86
PLUS                 : 81 93
PRIVATE              : 13 15
PUBLIC               : 12 14
RETURN               : 40
RIGHT_CB             : 4 5 33
RIGHT_PN             : 26 27 28 36 37 38 39 63 64 73
RIGHT_SQB            : 
SEMI_COLON           : 18 39 39 40 41 42 43
SL_COMMENT           : 
STAR                 : 83
STATIC               : 12 13 16
STRING_CONST         : 56
SUPER                : 62
THIS                 : 61
TRUE                 : 58
TYPE_BOOLEAN         : 21
TYPE_FLOAT           : 20
TYPE_INT             : 19
TYPE_VOID            : 27
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

arguments            : 64 68 73
assign               : 75 96
block                : 26 27 28 44
class_body_decl      : 6 7
class_body_decl_list : 4 5 6
class_decl           : 2
class_decl_list      : 1 2
constructor_decl     : 10
empty                : 3 17 29 34 47 49 51 53 67
expr                 : 36 37 38 48 52 63 68 69 76 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 94 95
field_access         : 70 73
field_decl           : 8
for_cond1            : 39
for_cond2            : 39
for_cond3            : 39
formal_param         : 30 31
formals              : 26 27 28 30
lhs                  : 65 76 77 78 79 80
literal              : 60
method_decl          : 9
method_invocation    : 66 97
modifier             : 11 26 27 28
primary              : 72 74
program              : 0
return_val           : 40
stmt                 : 35 36 37 37 38 39
stmt_expr            : 41 46 50
stmt_list            : 33 35
type                 : 18 26 32
var_decl             : 11 45
variable             : 23 24 32
variables            : 18 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> . empty
    (4) class_decl -> . CLASS ID LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> . CLASS ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB
    (98) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 98 (empty -> .)

    program                        shift and go to state 1
    class_decl_list                shift and go to state 2
    class_decl                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl_list .

    $end            reduce using rule 1 (program -> class_decl_list .)


state 3

    (2) class_decl_list -> class_decl . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> . empty
    (4) class_decl -> . CLASS ID LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> . CLASS ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB
    (98) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 98 (empty -> .)

    class_decl                     shift and go to state 3
    class_decl_list                shift and go to state 6
    empty                          shift and go to state 4

state 4

    (3) class_decl_list -> empty .

    $end            reduce using rule 3 (class_decl_list -> empty .)


state 5

    (4) class_decl -> CLASS . ID LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> CLASS . ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB

    ID              shift and go to state 7


state 6

    (2) class_decl_list -> class_decl class_decl_list .

    $end            reduce using rule 2 (class_decl_list -> class_decl class_decl_list .)


state 7

    (4) class_decl -> CLASS ID . LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> CLASS ID . EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB

    LEFT_CB         shift and go to state 8
    EXTENDS         shift and go to state 9


state 8

    (4) class_decl -> CLASS ID LEFT_CB . class_body_decl_list RIGHT_CB
    (6) class_body_decl_list -> . class_body_decl_list class_body_decl
    (7) class_body_decl_list -> . class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (11) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID LEFT_PN formals RIGHT_PN block
    (27) method_decl -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN block
    (28) constructor_decl -> . modifier ID LEFT_PN formals RIGHT_PN block
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty
    (98) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    TYPE_VOID       reduce using rule 98 (empty -> .)
    ID              reduce using rule 98 (empty -> .)
    TYPE_INT        reduce using rule 98 (empty -> .)
    TYPE_FLOAT      reduce using rule 98 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 98 (empty -> .)

    class_body_decl_list           shift and go to state 10
    class_body_decl                shift and go to state 11
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 9

    (5) class_decl -> CLASS ID EXTENDS . ID LEFT_CB class_body_decl_list RIGHT_CB

    ID              shift and go to state 20


state 10

    (4) class_decl -> CLASS ID LEFT_CB class_body_decl_list . RIGHT_CB
    (6) class_body_decl_list -> class_body_decl_list . class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (11) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID LEFT_PN formals RIGHT_PN block
    (27) method_decl -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN block
    (28) constructor_decl -> . modifier ID LEFT_PN formals RIGHT_PN block
    (12) modifier -> . PUBLIC STATIC
    (13) modifier -> . PRIVATE STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . PRIVATE
    (16) modifier -> . STATIC
    (17) modifier -> . empty
    (98) empty -> .

    RIGHT_CB        shift and go to state 21
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    TYPE_VOID       reduce using rule 98 (empty -> .)
    ID              reduce using rule 98 (empty -> .)
    TYPE_INT        reduce using rule 98 (empty -> .)
    TYPE_FLOAT      reduce using rule 98 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 98 (empty -> .)

    class_body_decl                shift and go to state 22
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 11

    (7) class_body_decl_list -> class_body_decl .

    RIGHT_CB        reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    PUBLIC          reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    PRIVATE         reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    STATIC          reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    TYPE_VOID       reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    ID              reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    TYPE_INT        reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    TYPE_FLOAT      reduce using rule 7 (class_body_decl_list -> class_body_decl .)
    TYPE_BOOLEAN    reduce using rule 7 (class_body_decl_list -> class_body_decl .)


state 12

    (8) class_body_decl -> field_decl .

    RIGHT_CB        reduce using rule 8 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> field_decl .)
    TYPE_VOID       reduce using rule 8 (class_body_decl -> field_decl .)
    ID              reduce using rule 8 (class_body_decl -> field_decl .)
    TYPE_INT        reduce using rule 8 (class_body_decl -> field_decl .)
    TYPE_FLOAT      reduce using rule 8 (class_body_decl -> field_decl .)
    TYPE_BOOLEAN    reduce using rule 8 (class_body_decl -> field_decl .)


state 13

    (9) class_body_decl -> method_decl .

    RIGHT_CB        reduce using rule 9 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> method_decl .)
    TYPE_VOID       reduce using rule 9 (class_body_decl -> method_decl .)
    ID              reduce using rule 9 (class_body_decl -> method_decl .)
    TYPE_INT        reduce using rule 9 (class_body_decl -> method_decl .)
    TYPE_FLOAT      reduce using rule 9 (class_body_decl -> method_decl .)
    TYPE_BOOLEAN    reduce using rule 9 (class_body_decl -> method_decl .)


state 14

    (10) class_body_decl -> constructor_decl .

    RIGHT_CB        reduce using rule 10 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> constructor_decl .)
    TYPE_VOID       reduce using rule 10 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 10 (class_body_decl -> constructor_decl .)
    TYPE_INT        reduce using rule 10 (class_body_decl -> constructor_decl .)
    TYPE_FLOAT      reduce using rule 10 (class_body_decl -> constructor_decl .)
    TYPE_BOOLEAN    reduce using rule 10 (class_body_decl -> constructor_decl .)


state 15

    (11) field_decl -> modifier . var_decl
    (26) method_decl -> modifier . type ID LEFT_PN formals RIGHT_PN block
    (27) method_decl -> modifier . TYPE_VOID ID LEFT_PN formals RIGHT_PN block
    (28) constructor_decl -> modifier . ID LEFT_PN formals RIGHT_PN block
    (18) var_decl -> . type variables SEMI_COLON
    (19) type -> . TYPE_INT
    (20) type -> . TYPE_FLOAT
    (21) type -> . TYPE_BOOLEAN
    (22) type -> . ID

    TYPE_VOID       shift and go to state 26
    ID              shift and go to state 25
    TYPE_INT        shift and go to state 27
    TYPE_FLOAT      shift and go to state 28
    TYPE_BOOLEAN    shift and go to state 29

    var_decl                       shift and go to state 23
    type                           shift and go to state 24

state 16

    (12) modifier -> PUBLIC . STATIC
    (14) modifier -> PUBLIC .

    STATIC          shift and go to state 30
    TYPE_VOID       reduce using rule 14 (modifier -> PUBLIC .)
    ID              reduce using rule 14 (modifier -> PUBLIC .)
    TYPE_INT        reduce using rule 14 (modifier -> PUBLIC .)
    TYPE_FLOAT      reduce using rule 14 (modifier -> PUBLIC .)
    TYPE_BOOLEAN    reduce using rule 14 (modifier -> PUBLIC .)


state 17

    (16) modifier -> STATIC .

    TYPE_VOID       reduce using rule 16 (modifier -> STATIC .)
    ID              reduce using rule 16 (modifier -> STATIC .)
    TYPE_INT        reduce using rule 16 (modifier -> STATIC .)
